close the CreateVM component after creating a new VM

--- a/vimmasite/vimma/static/vimma/components/vms-tab/vms-tab.html
+++ b/vimmasite/vimma/static/vimma/components/vms-tab/vms-tab.html
@@ -35,7 +35,7 @@
         </button>
       </template>
       <template if="{{showCreateVMComponent}}">
-        <create-vm showCloseBtn on-vm-created="{{reload}}"
+        <create-vm showCloseBtn on-vm-created="{{vmCreated}}"
           on-cancel-create-vm="{{toggleCreateVM}}"></create-vm>
       </template>
 
