aws vm dns name in summary

--- a/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-summary.html
+++ b/vimmasite/vimma/static/vimma/components/vm-detail/aws-vm-summary.html
@@ -24,7 +24,8 @@
     </template>
 
     <template id="main">
-      ‘{{awsvm.name}}’ (AWS), state ‘{{awsvm.state}}’
+      {{awsvm.name}}.{{awsprovider.route_53_zone}} (AWS),
+      state ‘{{awsvm.state}}’
     </template>
   </template>
 
