--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -12,6 +12,9 @@
   <script src="{% static 'vimma/components/bower_components/jquery/dist/jquery.min.js' %}"></script>
   <script src="{% static 'vimma/components/bower_components/jquery.cookie/jquery.cookie.js' %}"></script>
   <!--script src="{% static 'vimma/components/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script-->
+  <script src="{% static 'vimma/components/bower_components/highcharts/highcharts.js' %}"></script>
+
+  <script src="{% static 'vimma/js/index.js' %}"></script>
 {% endblock %}
 
 {% block body %}
