add firewall rules

--- a/vimmasite/vimma/static/vimma/components/expiration-item/expiration-item.html
+++ b/vimmasite/vimma/static/vimma/components/expiration-item/expiration-item.html
@@ -4,6 +4,7 @@
 
 <link rel="import" href="../error-display/error-display.html">
 <link rel="import" href="../local-date/local-date.html">
+<link rel="import" href="../ajax-state/ajax-state.html">
 
 <polymer-element name="expiration-item" attributes="expid">
   <template>
