--- a/vimmasite/vimma/static/vimma/components/show-count/show-count.html
+++ b/vimmasite/vimma/static/vimma/components/show-count/show-count.html
@@ -1,7 +1,9 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<polymer-element name="show-count" attributes="n name" noscript>
+<polymer-element name="show-count" attributes="n name">
   <template><!--
   -->{{n}} {{name}}{{n === 1 ? '' : 's'}}<!--
   --></template>
+
+  <script src="show-count.js"></script>
 </polymer-element>
