firewall rules: rename From/To → Port Range Start/End
https://app.asana.com/0/18046496917790/33068739398259/f

--- a/vimmasite/vimma/static/vimma/components/firewall-rules/new-aws-rule.html
+++ b/vimmasite/vimma/static/vimma/components/firewall-rules/new-aws-rule.html
@@ -8,8 +8,8 @@
       <thead>
         <tr>
           <th>IP Protocol</th>
-          <th>From port</th>
-          <th>To port</th>
+          <th>Port Range Start</th>
+          <th>Port Range End</th>
           <th>CIDR IP</th>
         </tr>
       </thead>
