--- a/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
+++ b/vimmasite/vimma/static/vimma/components/create-vm/create-vm.html
@@ -96,7 +96,8 @@
       </template>
 
       <template if="{{newVMType == 'aws'}}">
-        <create-vm-aws-data data="{{newVMData}}">
+        <create-vm-aws-data vmconf_id="{{shownConfs[shownConfsIdx].id}}"
+          data="{{newVMData}}">
         </create-vm-aws-data>
       </template>
 
