--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -6,17 +6,20 @@
   <!--title>Vimma</title-->
   <link rel="stylesheet" type="text/css" href="{% static 'vimma/components/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
 
+  <!-- TODO
   <script src="{% static 'vimma/components/bower_components/webcomponentsjs/webcomponents.js' %}"></script>
   <link rel="import" href="{% static 'vimma/components/index-elem/index-elem.html' %}">
+  -->
 
   <script src="{% static 'vimma/components/bower_components/jquery/dist/jquery.min.js' %}"></script>
   <script src="{% static 'vimma/components/bower_components/jquery.cookie/jquery.cookie.js' %}"></script>
-  <!--script src="{% static 'vimma/components/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script-->
   <script src="{% static 'vimma/components/bower_components/highcharts/highcharts.js' %}"></script>
 
   <script src="{% static 'vimma/js/index.js' %}"></script>
 {% endblock %}
 
 {% block body %}
+  <!-- TODO
   <index-elem></index-elem>
+  -->
 {% endblock %}
