use new Polymer include and definition styles; Hello World <index-elem>

--- a/vimmasite/vimma/templates/vimma/index.html
+++ b/vimmasite/vimma/templates/vimma/index.html
@@ -6,10 +6,8 @@
   <!--title>Vimma</title-->
   <link rel="stylesheet" type="text/css" href="{% static 'vimma/components/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
 
-  <!-- TODO
-  <script src="{% static 'vimma/components/bower_components/webcomponentsjs/webcomponents.js' %}"></script>
+  <script src="{% static 'vimma/components/bower_components/webcomponentsjs/webcomponents-lite.min.js' %}"></script>
   <link rel="import" href="{% static 'vimma/components/index-elem/index-elem.html' %}">
-  -->
 
   <script src="{% static 'vimma/components/bower_components/jquery/dist/jquery.min.js' %}"></script>
   <script src="{% static 'vimma/components/bower_components/jquery.cookie/jquery.cookie.js' %}"></script>
@@ -19,7 +17,5 @@
 {% endblock %}
 
 {% block body %}
-  <!-- TODO
   <index-elem></index-elem>
-  -->
 {% endblock %}
