<show-count> and split imperative and declarative element defs

--- a/vimmasite/vimma/static/vimma/components/test/index.html
+++ b/vimmasite/vimma/static/vimma/components/test/index.html
@@ -11,6 +11,7 @@
   <body>
     <script>
       var suites = [
+          '../show-count/test/index.html'
       ];
 
       WCT.loadSuites(suites);
