--- a/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
+++ b/vimmasite/vimma/static/vimma/components/index-elem/index-elem.html
@@ -6,8 +6,4 @@
   </template>
 </dom-module>
 
-<script>
-  Polymer({
-    is: 'index-elem'
-  });
-</script>
+<script src="index-elem.js"></script>
