--- a/vimmasite/vimma/templates/vimma/test.html
+++ b/vimmasite/vimma/templates/vimma/test.html
@@ -3,12 +3,12 @@
 
 {% block head %}
   <title>Unit Tests</title>
-  <link rel="stylesheet" href="{% static 'vimma/css/lib/qunit-1.15.0.css' %}">
+  <link rel="stylesheet" href="{% static 'vimma/components/bower_components/qunit/qunit/qunit.css' %}">
 {% endblock %}
 
 {% block body %}
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="{% static 'vimma/js/lib/qunit-1.15.0.js' %}"></script>
+  <script src="{% static 'vimma/components/bower_components/qunit/qunit/qunit.js' %}"></script>
   <script src="{% static 'vimma/js/test.js' %}"></script>
 {% endblock %}
