minor: get in the habit of using one-way bindings

--- a/vimmasite/vimma/static/vimma/components/show-count/show-count.html
+++ b/vimmasite/vimma/static/vimma/components/show-count/show-count.html
@@ -4,7 +4,7 @@
   Show "1 cat" or "3 cats". ‘many’ is optional and defaults to ‘one’s.
 -->
 <dom-module id="show-count">
-  <template>{{_result}}</template>
+  <template>[[_result]]</template>
 </dom-module>
 
 <script src="show-count.js"></script>
