minor: /etc/hosts in README and simplify wct test index

--- a/vimmasite/vimma/static/vimma/components/test/index.html
+++ b/vimmasite/vimma/static/vimma/components/test/index.html
@@ -9,11 +9,9 @@
 
   <body>
     <script>
-      var suites = [
+      WCT.loadSuites([
           '../show-count/test/index.html'
-      ];
-
-      WCT.loadSuites(suites);
+      ]);
     </script>
   </body>
 </html>
