support browsers using the HTMLImports Polyfill (fix tests on Firefox)
Don't use document.createElement('my-elem') before WebComponentsReady.
https://github.com/webcomponents/webcomponentsjs#webcomponentsready

--- a/vimmasite/vimma/static/vimma/components/frag-split/test/multi.html
+++ b/vimmasite/vimma/static/vimma/components/frag-split/test/multi.html
@@ -15,8 +15,11 @@
     <multi-comp id="mc"></multi-comp>
 
     <script>
-      var e = document.getElementById('mc'),
-          fu = document.createElement('frag-util');
+      var e, fu;
+      window.addEventListener('WebComponentsReady', function() {
+        e = document.getElementById('mc');
+        fu = document.createElement('frag-util');
+      });
 
       // check that the top-level ‘frag’ is correctly distributed among elems.
       function chk(frag) {
