--- a/vimmasite/vimma/static/vimma/components/test/index.html
+++ b/vimmasite/vimma/static/vimma/components/test/index.html
@@ -10,6 +10,7 @@
   <body>
     <script>
       var elems = [
+        'frag-history',
         'frag-split',
         'frag-util',
         'show-count'
