--- a/vimmasite/vimma/static/vimma/components/test/index.html
+++ b/vimmasite/vimma/static/vimma/components/test/index.html
@@ -13,6 +13,7 @@
         'frag-history',
         'frag-split',
         'frag-util',
+        'plain-text',
         'show-count'
       ];
       var suites = elems.map(function(e) {
